--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "constantinople": "^3.1.2",
@@ -14,6 +15,7 @@
     "jade": "~1.11.0",
     "jstransformer": "^1.0.0",
     "morgan": "~1.9.0",
+    "nodemon": "^1.18.10",
     "pug": "^2.0.3"
   }
 }
