--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,10 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "jstransformer": "^1.0.0",
+    "knex": "^0.16.3",
     "morgan": "~1.9.0",
     "nodemon": "^1.18.10",
+    "pg": "^7.8.0",
     "pug": "^2.0.3"
   }
 }
